--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,7 +14,7 @@ jobs:
       max-parallel: 2
       fail-fast: false
       matrix:
-        php-version: [7.4, 8.0]
+        php: [7.4, 8.0]
         experimental: [false]
 
     steps:
