--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -37,9 +37,13 @@ jobs:
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
           ${{ runner.os }}-php-
+    - name: Install dependencies with Composer
+      uses: ramsey/composer-install@v1.3.0
+      with:
+        composer-options: "--ignore-platform-reqs"
 
-    - name: Install dependencies
-      run: composer install --prefer-dist --no-progress
+#     - name: Install dependencies
+#       run: composer install --prefer-dist --no-progress
 #     - name: Run unit tests
 #       run: php vendor/bin/codecept run unit
 #     - name: Run Codecept coverage
