--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -43,14 +43,12 @@ jobs:
       with:
         composer-options: "--ignore-platform-reqs"
 
-#     - name: Install dependencies
-#       run: composer install --prefer-dist --no-progress
-#     - name: Run unit tests
-#       run: php vendor/bin/codecept run unit
-#     - name: Run Codecept coverage
-#       run: php vendor/bin/codecept run --coverage coverage.xml
-    - name: Codeception Action
-      uses: joelwmale/codeception-action@master
+    - name: Install dependencies
+      run: composer install --prefer-dist --no-progress
+    - name: Run unit tests
+      run: php vendor/bin/codecept run unit
+    - name: Run Codecept coverage
+      run: php vendor/bin/codecept run --coverage coverage.xml
     - name: Codecov
       uses: codecov/codecov-action@v2.1.0
       with:
