--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -41,14 +41,14 @@ jobs:
     - name: Install dependencies with Composer
       uses: ramsey/composer-install@v1
       with:
-        composer-options: "--ignore-platform-reqs"
-
-    - name: Install dependencies
-      run: composer install --prefer-dist --no-progress
+        composer-options: "---prefer-dist --no-progres"
+        
     - name: Run unit tests
       run: php vendor/bin/codecept run unit
+      
     - name: Run Codecept coverage
       run: php vendor/bin/codecept run --coverage coverage.xml
+      
     - name: Codecov
       uses: codecov/codecov-action@v2.1.0
       with:
