--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -46,7 +46,10 @@ jobs:
       
     - name: Run Codecept coverage
       run: php vendor/bin/codecept run --coverage --coverage-xml --coverage-phpunit
-      
+
+    - name: Download artifacts
+      uses: actions/download-artifact@v2
+
     - name: Codecov
       uses: codecov/codecov-action@v2.1.0
       with:
