Исправлена среда тестирования

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -53,5 +53,5 @@ jobs:
     - name: Codecov
       uses: codecov/codecov-action@v2.1.0
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        directory: ./tests/
+        files: ./tests/_output/coverage.xml
+        verbose: true
