--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -16,6 +16,7 @@ jobs:
       matrix:
         php: [7.4, 8.0]
         experimental: [false]
+        analysis: true
 
     steps:
     - uses: actions/checkout@v2
@@ -50,12 +51,10 @@ jobs:
     - name: Download artifacts
       uses: actions/download-artifact@v2
 
-    - name: Codecov
-      uses: codecov/codecov-action@v2.1.0
-      with:
-        files: ./tests/_output/coverage.xml
-        verbose: true
-        token: ${{ secrets.CODECOV_TOKEN }}
-
-    - name: Codecov Action
-      uses: Atrox/codecov-action@v0.1.3
+    - name: Upload coverage results to Coveralls
+      if: matrix.analysis
+      env:
+        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
+      run: |
+        composer require php-coveralls/php-coveralls -n -W
+        vendor/bin/php-coveralls --coverage_clover=clover.xml -v
