--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -50,9 +50,7 @@ jobs:
     - name: Download artifacts
       uses: actions/download-artifact@v2
 
-    - name: Upload coverage results to Coveralls
-      env:
-        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
-      run: |
-        composer require php-coveralls/php-coveralls -n -W
-        vendor/bin/php-coveralls --coverage_clover=clover.xml -v
+    - name: Coveralls GitHub Action
+      uses: coverallsapp/github-action@1.1.3
+      with:
+        github-token: ${{ secrets.COVERALLS_TOKEN }}
