--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,4 +1,4 @@
-name: PHP Composer
+name: build
 
 on:
   push:
@@ -49,8 +49,3 @@ jobs:
 
     - name: Download artifacts
       uses: actions/download-artifact@v2
-
-    - name: Coveralls GitHub Action
-      uses: coverallsapp/github-action@1.1.3
-      with:
-        github-token: ${{ secrets.COVERALLS_TOKEN }}
