--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -49,3 +49,12 @@ jobs:
 
     - name: Download artifacts
       uses: actions/download-artifact@v2
+
+    - name: Codecov
+      uses: codecov/codecov-action@v2.1.0
+      with:
+        directory: ./tests/_output
+        files: ./coverage.xml
+        flags: unittests
+        verbose: true
+        fail_ci_if_error: true
