--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -53,8 +53,9 @@ jobs:
     - name: Codecov
       uses: codecov/codecov-action@v2.1.0
       with:
+        token: ${{ secrets.CODECOV_TOKEN }}
         directory: ./tests/_output
-        files: ./coverage.xml
+        files: ./tests/_output/coverage.xml
         flags: unittests
         verbose: true
         fail_ci_if_error: true
